# yomi-note

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js  vite.config.ts
.claude/: settings.local.json
docs/: ad-prompt.md  macos-release.md  release.md
patches/: kuromoji+0.1.2.patch
public/: jmdict-katakana.json
scripts/: build-jmdict-katakana.mjs  notarize-dmg.mjs  test-katakana-dict.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.tsx  ActionToolbar.tsx  Editor.tsx  MediaInsertDialog.tsx  Preview.tsx  SelectionAnnotatePopup.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx  UserDictPanel.tsx
src/hooks/: useAutoSave.ts  useMenuListener.ts
src/i18n/: index.ts  translations.ts
src/store/: useAppStore.ts  useDictStore.ts  useSettingsStore.ts  useUserDictStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: annotateActions.ts  editorCommands.ts  export.ts  fs.ts  japaneseAnnotate.ts  katakanaDict.ts  markdown.ts  mediaActions.ts  readingDictActions.ts
