[package]
name = "yomi-note"
version = "0.1.0"
description = "YomiNote - 日本語の読みを助ける Markdown デスクトップエディタ"
authors = ["YomiNote"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "yomi_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-store = "2.1"
tauri-plugin-os = "2.0"
tauri-plugin-window-state = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# デフォルトはカスタムプロトコルを利用
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
